Experimental fix for mobile jumpiness

--- a/_includes/presets.css
+++ b/_includes/presets.css
@@ -4,9 +4,14 @@ body, html {
 	margin: 0;
 	padding: 0;
 }
+html{
+	overflow-y: hidden;
+}
 body{
 	font-family: monospace;
-	color: {{ site.style.text }}
+	color: {{ site.style.text }};
+	overflow-y: scroll;
+	-webkit-overflow-scrolling: touch;
 }
 a {
 	text-decoration: none;
